--- a/src/A11Y.md
+++ b/src/A11Y.md
@@ -1,4 +1,4 @@
-## Accessibility and testing
+# Accessibility and testing
 
 Development of components require fine attention to details for conforming to accessibility regulations. For more information on how to best use Aria rules, please be sure to review this document by the [Google Chrome team](https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules).
 
