docs: update sprint7 doc

--- a/support/sprintDocs/2020/07.md
+++ b/support/sprintDocs/2020/07.md
@@ -52,9 +52,13 @@ Key: **[F]** feature, **[UI]** Unplanned item, **[S]** Sustainment, **[I]** Impr
 
 ## Sprint #7 value delivered
 
-- [x] Clear outline for Auro Compliance model
+- [x] New Auro PUBLIC channel opened in Teams
+  - Asset management and the Auro Team
+  - Process. support and maintenance
+  - Clear outline for Auro Compliance model
+  - Using the Auro Design System
 - [x] Icon repository features simplified reducing contribution confusion
-- [x] Added a11y feature to WCSS
-- [x] WC Generator vastly improved new development experience 
+- [x] Added default a11y features to WCSS
+- [x] WC Generator vastly improved new development experience
 - [x] New design template and process documented for reuse (thanks Corey)
-- [x] Squashed bug!
+- [x] Squashed many bugs!
