--- a/support/sprintDocs/2020/08.md
+++ b/support/sprintDocs/2020/08.md
@@ -59,8 +59,8 @@ Key:
 
 ## Sprint #8 value delivered
 
-- [ ] Training documentation is in full swing
-- [ ] The internal DOC SITE is up and running and new platform docs have been created to support 
-- [ ] New content added to internal site and gitbook site is slowly deprecating 
-- [ ] WC Generator and ods-button now support pre-bundled assets
-- [ ] Code linting support has been added to ods-button, ods-swatch and ods-toast
+- [x] Training documentation is in full swing
+- [x] The internal DOC SITE is up and running and new platform docs have been created to support 
+- [x] New content added to internal site and gitbook site is slowly deprecating 
+- [x] WC Generator and ods-button now support pre-bundled assets
+- [x] Code linting support has been added to ods-button, ods-swatch and ods-toast
